Fix button wrap issue

--- a/structuretimers/static/structuretimers/timer_list.css
+++ b/structuretimers/static/structuretimers/timer_list.css
@@ -7,6 +7,7 @@
 }
 .table_timers tbody td:nth-child(1) { white-space: nowrap; }
 .table_timers tbody td:nth-child(2) { white-space: nowrap; }
+.table_timers tbody td:nth-child(8) { white-space: nowrap; }
 
 /*
 .nav-tabs > li {
